--- a/AndroidStudioProjects/BMIApp2/app/src/main/res/layout/activity_main.xml
+++ b/AndroidStudioProjects/BMIApp2/app/src/main/res/layout/activity_main.xml
@@ -25,9 +25,9 @@
         android:id="@+id/etHeight"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
         android:hint="Enter height (m)"
-        android:inputType="numberDecimal"
-        android:layout_marginTop="10dp"/>
+        android:inputType="numberDecimal" />
 
     <Button
         android:id="@+id/btnCalculate"
